# aw-cli

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  aw-cli.py  disclaimer.md  pyproject.toml  requirments.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-publish.yml  release.yml
aw-cli/: __init__.py  requirments.txt  run.py
aw_cli/: __init__.py
awcli/: Provider.py  __init__.py  __main__.py  anilist.py  anime.py  animeworld.py  arg_parser.py  aw-cli.py  aw.config  download.py  functions.py  history.py  run.py  utilities.py  version.py  windows.py
awcli/providers/: Animeworld.py  Provider.py  __init__.py  animeunity.py  animeworld.py  local.py  provider.py
src/aw_cli/: anilist.py  anime.py  arg_parser.py  aw-cronologia.csv  download.py  history.py  run.py  update.py  utilities.py
src/aw_cli/fzf/: fzf.py
src/aw_cli/interface/: __init__.py  fzf.py  preview.py
src/aw_cli/providers/: __init__.py  animeunity.py  animeworld.py  local.py  (+1 more)
tests/: conftest.py  empty  search_dragonball  search_dragonball.html  search_onepiece  search_onepiece.html  test_anime.py  test_animeworld.py  test_fzf.py  test_history.py  test_prividers.py  test_rich_integration.py  test_run.py  test_utilities.py  theeminenceinshadowep13  update_fixtures.py
tests/core/: test_history.py
tests/fixtures/: au_info.json  au_latest.html  au_search.json  aw_info.html  aw_latest.html  aw_search.html
tests/interface/: test_fzf.py  test_preview.py
tests/providers/: test_animeunity.py  test_animeworld.py  test_cache.py  test_provider.py
