[project]
name = "aw-cli"
version = "2.2.0b1"
description = "Guarda anime dal terminale e molto altro!"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pip-system-certs>=5.2",
    "regex>=2025.9.18",
    "toml>=0.10.2",
    "wheel>=0.45.1",
]

[project.scripts]
aw-cli = "aw_cli.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
